    - Fixed blinking trades in hex cores.
    - [item=crude-oil-barrel] no longer shows up in trades on [planet=vulcanus].
  Features:
    - Trades now work on a per-quality basis.
      Normal in, normal out. Rare in, rare out, etc.
      Only one trade is needed for all qualities. Works up to the hex core's quality.
      Coins do not have quality, so they multiply for each quality tier.
  Minor Features:
    - Planets now show in item tooltips to indicate that the item value is strongly tied to that planet.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 13/5/25
  Bugfixes:
    - Faraway hexes had no trades sometimes.
    - Trade overview input and output filtering wasn't combining correctly.
    - "Show claimed only" trade overview filter was showing only unclaimed trades.
  Features:
    - Trade overview now has options to filter for exact inputs or exact outputs.
    - Trade overview now has sorting options for various metrics.
    - Trade overview now shows progress during processing of trades to be listed.
    - Trade overview trade content filters can now be swapped by clicking on the trade arrow between them.
  Optimizations:
    - Made trade overview loading less UPS-intensive.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 12/5/25
  Major Features:
    - Added [planet=vulcanus].
  Balancing:
    - Decreased the rate at which item values scale on Nauvis.
    - Reduced productivity bonuses to half, except for the quest reward.
  Bugfixes:
    - Fixed volume calculation for the extra trades added by bronze rank items.
  Optimizations:
    - Optimized trade overview.
  Minor Features:
    - Added commands /spawn-ship, /chart
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 7/5/25
  Features:
    - Added more quests and rewards.