@@ -16,6 +16,7 @@ Date: 14/5/25
       Normal in, normal out. Rare in, rare out, etc.
       Only one trade is needed for all qualities. Works up to the hex core's quality.
       Coins do not have quality, so they multiply for each quality tier.
+    - Production statistics now include the statistics of currently active trading on each surface.
   Minor Features:
     - Planets now show in item tooltips to indicate that the item value is strongly tied to that planet.
 ---------------------------------------------------------------------------------------------------
